--- a/ex21/index.html
+++ b/ex21/index.html
@@ -8,20 +8,20 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    <h2>확장선택자와 함께 가상클래스 checked 실전 퍼블리싱 03</h4>
-    <h3>탭 메뉴 콘텐츠 만들기</h3>
+    <h2>확장선택자와 함께 가상클래스 checked 실전 퍼블리싱 04</h4>
+    <h3>탭 콘텐츠 - Opacity</h3>
     <div class="tab-inner">
         <input type="radio"name="tabmenu" id="tab1" checked>
         <input type="radio"name="tabmenu" id="tab2">
         <input type="radio"name="tabmenu" id="tab3">
         <div class="content slide1">
-            <img src="./img/니나브.jpg" alt="">
+            <a href="#none1"><img src="./img/니나브.jpg" alt=""></a>
         </div>
         <div class="content slide2">
-            <img src="./img/아브렐슈드.jpg" alt="">
+            <a href="#none2"><img src="./img/아브렐슈드.jpg" alt=""></a>
         </div>
         <div class="content slide3">
-            <img src="./img/에아달린.jpg" alt="">
+            <a href="#none3"><img src="./img/에아달린.jpg" alt=""></a>
         </div>
         <div class="btn">
             <label for="tab1"></label>
