--- a/ex22/index.html
+++ b/ex22/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    <h2>확장선택자와 함께 가상클래스 checked 실전 퍼블리싱 05</h4>
-    <h3>탭 콘텐츠 – Opacity 응용</h3>
+    <h2>확장선택자와 함께 가상클래스 checked 실전 퍼블리싱 04</h4>
+    <h3>탭 콘텐츠 - Opacity</h3>
     <div class="tab-inner">
         <input type="radio"name="tabmenu" id="tab1" checked>
         <input type="radio"name="tabmenu" id="tab2">
@@ -27,6 +27,11 @@
             <label for="tab1"></label>
             <label for="tab2"></label>
             <label for="tab3"></label>
+        </div>
+        <div class="heading">
+            <div class="text1">니나브 <span>1#</span></div>
+            <div class="text2">아브렐슈드 <span>2#</span></div>
+            <div class="text3">에아달린 <span>3#</span></div>
         </div>
     </div>
 </body>
